--- a/Repast.settings
+++ b/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\usuario\workspaceUltimaV\infeccion\infeccion.rs</string>
+    <string>.\AedesAegypti.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
