Deshabilitado archivo log.

--- a/MessageCenter.log4j.properties
+++ b/MessageCenter.log4j.properties
@@ -15,6 +15,8 @@ log4j.appender.stdout.layout = simphony.util.messages.MessageCenterLayout
 log4j.appender.stdout.layout.conversionPattern =%-5p [%t] %d{HH:mm:ss,SSS} %c - %m%n
 #log4j.appender.stdout.Threshold=debug 
 
+log4j.additivity.FileLog=false
+
 log4j.appender.R=org.apache.log4j.RollingFileAppender 
 log4j.appender.R.File=debug.log 
 log4j.appender.R.MaxFileSize=100KB 
